[gd_scene load_steps=5 format=3 uid="uid://cy8dcpnnxd80a"]

[ext_resource type="Script" path="res://scripts/characters/shooter_enemy.gd" id="1_bqxbk"]
[ext_resource type="PackedScene" uid="uid://b38qnqvv63h57" path="res://scenes/characters/bases/shooter.tscn" id="1_k3hwj"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_bk215"]
radius = 1.431
height = 10.654

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_hg8at"]
radius = 1.431
height = 10.654

[node name="ShooterEnemy" type="CharacterBody3D" groups=["enemies_g"]]
script = ExtResource("1_bqxbk")

[node name="shooter" parent="." instance=ExtResource("1_k3hwj")]

[node name="LiveBox" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.197, 0)
shape = SubResource("CapsuleShape3D_bk215")

[node name="DeathHit" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 5.197, 0)
shape = SubResource("CapsuleShape3D_hg8at")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
target_desired_distance = 35.0
path_max_distance = 11.11
avoidance_enabled = true
radius = 3.0

[node name="HitSound" type="AudioStreamPlayer3D" parent="."]

[connection signal="target_reached" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_target_reached"]
[connection signal="velocity_computed" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_velocity_computed"]
